--- a/test.tex
+++ b/test.tex
@@ -1,3 +1,7 @@
+\input{runtime}
+\clearpage
+\input{appendix_runtime}
+
 %% \begin{table}[H]
 %%   %% \oddrowcolors
 %%   \begin{tabularx}{0.8\textwidth}{|XXX|}
