figure captions finished

--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -132,7 +132,7 @@ Mit dieser Parametrisierung konnte ebenfalls das TMA-Dimer bei niedrigen Tempera
     \label{fig:tmaliu}
   \end{subfigure}
 
-  \caption{Stabilität der TMA-Moleküle für verschiedene \ce{Al2O3}-Parametersätze}
+  \caption{Stabilität der TMA-Moleküle für verschiedene ReaxFF-Parametersätze}
   \label{fig:tmastability}
 \end{figure}
 
@@ -178,25 +178,28 @@ Bei vollständiger chemischer Adsorption aller Wassermoleküle ergäben für die
   \def\subfigwidth{0.32\textwidth}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{AlO_first_transparent}
-    \subcaption{Seitenansicht, vor der Reaktion}
+    \subcaption{Seitenansicht, \\
+      vor der Reaktion}
     \label{fig:wateraluminasurface-a}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{AlO_hydroxylation_side}
-    \subcaption{Seitenansicht, nach der Reaktion}
+    \subcaption{Seitenansicht, \\
+      nach der Reaktion}
     \label{fig:wateraluminasurface-b}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{AlO_hydroxylation_top_transparent_thinner}
-    \subcaption{Draufsicht, nach der Reaktion.
-%      \textbf{Hydroxyl} ist grün hervorgehoben.
+    \subcaption{Draufsicht,\\
+      nach der Reaktion
     }
     \label{fig:wateraluminasurface-c}
   \end{subfigure}
-  \caption[Oberflächenreaktion von Wasser mit $\alpha$-\ce{Al2O3}]{Ergebnisse einer Oberflächenreaktion von Wasser mit $\alpha$-\ce{Al2O3}.
-    Das Wasser reagiert mit Sauerstoffatomen an der Oberfläche zu Hydroxylgruppen.
+  \caption{
+    Simulation einer Hydroxylierung von $\alpha$-\ce{Al2O3} mit Wasser.
+    Die Oberfläche wird mit Hydroxylgruppen (grün hervorgehoben) abgesättigt.
   }
   \label{fig:wateraluminasurface}
 \end{figure}
