--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -26,7 +26,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
     \label{fig:goldnanostructures-columns}
   \end{subfigure}
 
-  \caption{Nanostrukturierte Substrate zur Simulation der Oberflächenrelaxierung mit Parsivald}
+  \caption{Nanostrukturen zur Überprüfung der Oberflächenrelaxierung durch Parsivald}
   \label{fig:goldnanostructures}
 
 \end{figure}
