--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -12,7 +12,7 @@ Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die
 \begin{figure}[!h]
   \centering
   \includegraphics[height=10cm]{CuNi_surface8_noalpha}
-  \caption{Oberflächenprofil einer CuNi-Oberfläche nach nur 4 Lagen (\SI{60}{\angstrom})}
+  \caption{Oberflächenprofil einer unterrelaxierten CuNi-Oberfläche mit 4 Lagen je \SI{15}{\angstrom}}
   \label{fig:multilayer_surfacefail}
 \end{figure}
 
