--- a/appendix_silica.tex
+++ b/appendix_silica.tex
@@ -35,7 +35,7 @@ Bei \pot{Al\_Al0\_AlN}, \pot{kulkarni}, \pot{nielson} und \pot{zhang} behalten d
   \end{subfigure}
 
   \caption[Stabilitätsuntersuchungen von Silan]{
-    Stabilitätsuntersuchungen von Silan (\ce{SiH4}) bei 600K (CVD-Temperatur)
+    Stabilitätsuntersuchungen von Silan (\ce{SiH4}) bei \SI{600}{\kelvin}
   }
   \label{fig:silanestability}
 
@@ -83,8 +83,7 @@ Es zeigen sich jedoch auch hier Überkoordinationen, wie sie bereits in Abbildun
     \label{fig:kulkarnireaction}
   \end{subfigure}
 
-  \caption[Reaktionen von \ce{SiH4} mit \ce{O2}]{
-    Reaktion von \ce{SiH4} mit \ce{O2}
+  \caption{ReaxFF-Simulation der Reaktion von \ce{SiH4} mit \ce{O2}
   }
   \label{fig:precursorreactions}
 
@@ -108,7 +107,7 @@ Es zeigen sich jedoch auch hier Überkoordinationen, wie sie bereits in Abbildun
     \subcaption{\pot{zhang}: Reaktionen}
   \end{subfigure}
 
-  \caption[Cluster von Precursormolekülen]{Clusterbildung und partielle Reaktionen von Precursormolekülen bei 500K}
+  \caption{Simulation von Clusterbildung und partiellen Reaktionen von Precursormolekülen bei 500K}
   \label{fig:precursorclusters}
 
 \end{figure}
