--- a/contents.tex
+++ b/contents.tex
@@ -104,6 +104,7 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   TU
   CG     & Conjugated Gradients    & Konjugierte Gradienten                                              \\
   EU
+  RSA
   ACCELERATE
   XXX, XXR, SI - latex table definitions
   Mathematische hyperref-Symbole: TE TMD RE
