--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -30,7 +30,7 @@ Für diese Parametersätze wird eine kurze Voruntersuchung durchgeführt, bevor 
 \begin{table}[b!]
   \begin{threeparttable}
     \oddrowcolors
-    \caption{Vergleich struktureller Eigenschaften von Kupfer mit Literaturdaten}
+    \caption{Vergleich struktureller Eigenschaften von Kupfer mit Literaturdaten\cite{haynes_crc_2011}}
     \label{tab:copperpreresults}
     \begin{tabularx}{\textwidth}{|Xrrrrr|}
       \hline
@@ -76,10 +76,7 @@ Da diese drei Parametersätze, welche von der Arbeitsgruppe um \textsc{S.~M.~Foi
     \vspace{1em}
   \end{subfigure}
   \hfill
-  \caption[Vergleich der Schmelztemperatur von Kupfer]{
-    Vergleich der Schmelztemperatur von Kupfer.
-    Experimentelle Dichte:~\cite{brillo_density_2006}
-  }
+  \caption{Vergleich der Schmelztemperatur von Kupfer für \pot{Cu\_u6.eam}}
   \label{fig:copperthermo}
 \end{figure}
 
@@ -93,10 +90,7 @@ Da diese drei Parametersätze, welche von der Arbeitsgruppe um \textsc{S.~M.~Foi
     \includegraphics[width=\textwidth]{Cu_trelax_all_legend}
   \end{subfigure}
   \hfill
-  \caption[Vergleich der Schmelztemperatur von Kupfer]{
-    Vergleich der Schmelztemperatur von Kupfer.
-    Experimentelle Dichte:~\cite{brillo_density_2006}
-  }
+  \caption{Vergleich der Schmelztemperatur von Kupfer für alle Parametrisierungen}
   \label{fig:copperthermo2}
 \end{figure}
 
@@ -129,7 +123,9 @@ Unterschiede liegen in den Auftreffenergien von \SI{5.4}{\electronvolt}, die ebe
     \subcaption{Zeitliche Entwicklung der Rauheit}
     \label{fig:copperparsivald-b}
   \end{subfigure}
-  \caption{Simulationen von Kupfer-PVD auf \SI{200x200x24}{\angstrom} großen Substraten}
+  \caption{
+    Schichteigenschaften während \ce{Cu}-PVD für verschiedene Parametrisierungen
+  }
   \label{fig:copperparsivald}
 \end{figure}
 
@@ -190,8 +186,8 @@ Deshalb sind Abscheidungssimulationen auf polykristallinen und amorphen Substrat
   \end{subfigure}
 
   \caption[Bildung und Abschluss eines Kupfer-Kraters]{
-    Bildung und Abschluss eines Kupfer-Kraters mit \pot{u3}.\\
-    Seitenansicht der extrahierten Oberflächenatome
+    Bildung und Abschluss eines Kupfer-Kraters.
+    Seitenansicht der per Alpha-Form extrahierten Oberflächenatome
   }
   \label{fig:coppercrater}
 \end{figure}
@@ -222,6 +218,6 @@ Durch die zufällige Auswahl der Ereignisorte und der Bewahrung der Reihenfolge 
     \subcaption{Histogramm gleichzeitiger Ereignisse}
     \label{fig:copperworkerdensity-b}
   \end{subfigure}
-  \caption{Simulationen von Kupfer-PVD auf \SI{200x200x24}{\angstrom} großen Substraten}
+  \caption{Abbruchraten und Workerhistogramm für \ce{Cu}-PVD-Simulationen}
   \label{fig:copperworkerdensity}
 \end{figure}
