--- a/datastructures.tex
+++ b/datastructures.tex
@@ -93,8 +93,8 @@ Theoretisch sind mit Access Caching, Bitweiser Adressierung, Surface Flagging od
   \centering
   \includegraphics[width=\textwidth]{octree}
   \caption[Veranschaulichung der Funktionsweise eines Octrees]{
-    Quadtree zur Veranschaulichung der Funktionsweise eines Octrees:\\
-    Räumliche Unterteilung eines Raumes mit zugehörigem Baum von Zellen.
+    Quadtree zur Veranschaulichung der Funktionsweise eines Octrees:
+    Räumliche Unterteilung eines Raumes (l) mit zugehörigem Baum von Zellen (r).
   }
   \label{fig:octree}
 \end{figure}
