--- a/depositions.tex
+++ b/depositions.tex
@@ -184,7 +184,7 @@ Gerade für Anwendungen in der Mikro- und Nanoelektronik sind die strukturellen 
 
 \begin{table}[hb]
   \oddrowcolors
-  \caption{Überblick über Methoden zur Simulation von Gasphasenabscheidungen}
+  \caption{Auswahl numerischer Methoden zur Simulation von Gasphasenabscheidungen}
   \label{tab:deposition-simulations}
   \begin{tabularx}{\textwidth}{|XXlX|}
     \hline
