--- a/forcefields.tex
+++ b/forcefields.tex
@@ -26,7 +26,7 @@ Unterhalb dieses Radius' dominiert ein repulsiver Term, wo hingegen oberhalb dav
 \begin{figure}[b]
   \centering
   \includegraphics[width=0.5\textwidth]{mdpotplot}
-  \caption{Auswahl einfacher molekulardynamischer Paarpotentiale}
+  \caption{Ausgewählte Paarpotentiale für MD-Simulationen}
   \label{fig:mdpairpotentials}
 \end{figure}
 
