--- a/md.tex
+++ b/md.tex
@@ -169,9 +169,7 @@ Tabelle~\ref{tab:mdsoftware} stellt ausgewählte Vertreter moderner Molekulardyn
 
 \begin{table}[hb]
   \oddrowcolors
-  \caption[Verfügbare Molekulardynamik-Software]{
-    Verfügbare Molekulardynamik-Software
-  }
+  \caption{Auswahl verfügbarer Molekulardynamik-Software}
   \label{tab:mdsoftware}
   \begin{tabularx}{\textwidth}{|llX|}
     \hline
