--- a/parsivald.tex
+++ b/parsivald.tex
@@ -19,7 +19,7 @@ Durch die Nutzung massiver Parallelisierung werden zudem atomistische Simulation
   \centering
   \def\svgwidth{\textwidth}
   \input{img/parsivald-schema-flat.pdf_tex}
-  \caption{Auswahl und Durchführung einer Adsorption, verteilt auf KMC und MD}
+  \caption{Simulation einer Adsorption in Parsivald, verteilt auf KMC und MD}
   \label{fig:parsivald-schema}
 \end{figure}
 
