--- a/settings.tex
+++ b/settings.tex
@@ -72,7 +72,7 @@
         \kern-\@tempdimc
         \hskip-\wd\z@ \@plus -1fill }
 \makeatother
-\setlength{\arrayrulewidth}{0.6pt}
+%\setlength{\arrayrulewidth}{0.6pt}
 
 %threeparttable textwidth
 \renewcommand{\TPTminimum}{\textwidth}
@@ -97,6 +97,6 @@
 \newcommand{\chemlegend}[1]{\begin{minipage}[c]{0.7cm}\includegraphics[width=\textwidth]{#1}\end{minipage}}
 \newcommand{\chemlegendce}[1]{\chemlegend{#1}\ce{#1}}
 
-% asd 
+% asd
 %% \renewcommand{\oddrowcolors}{}
 %% \renewcommand{\evenrowcolors}{}
