--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -88,7 +88,7 @@ Die Parametersätze \pot{chenoweth}, \pot{lg} und \pot{liu\_nitra\-mines} konnte
 
 \begin{table}[!b]
   \oddrowcolors
-  \caption[Strukturelle Eigenschaften von c-Si]{Strukturelle Eigenschaften kristalliner Strukturen nach der Relaxierung mit verschiedenen ReaxFF-Parametrisierungen}
+  \caption{Struktur von c-\ce{Si} nach der MD-Relaxierung}
   \label{tab:csiresults}
 
   \begin{tabularx}{\textwidth}{|llXXlX|}
@@ -145,7 +145,7 @@ Die RDF wird außerdem hinsichtlich der Struktur des Materiales untersucht (Abbi
     \label{fig:liurdf}
   \end{subfigure}
 
-  \caption{RDF-Diagramme nach der Relaxierung von c-\ce{Si}-Strukturen}
+  \caption{RDF-Diagramme von c-\ce{Si}-Strukturen nach der MD-Relaxierung}
   \label{fig:siliconrdf}
 \end{figure}
 
@@ -160,7 +160,7 @@ Aufgrund der Spannweite möglicher amorpher Strukturen gilt eine Parametrisierun
 \begin{table}[h]
   \begin{threeparttable}
 
-    \caption{Vergleich der Struktur amorphen Siliziums}
+    \caption{Vergleich der strukturellen Eigenschaften von amorphem Silizium}
     \label{tab:amorphoussilicon}
 
     \oddrowcolors
@@ -240,7 +240,7 @@ In der RDF der Schicht (Abbildung~\ref{fig:siliconresults-b}) ist das kristallin
     \label{fig:siliconresults-b}
   \end{subfigure}
   \caption[Struktur einer Silizium-PVD-Schicht aus Parsivald]{
-    Struktur einer Silizium-PVD-Schicht aus Parsivald (\SI{10x10}{\nano\meter})
+    Struktur einer Silizium-PVD-Schicht aus Parsivald (\SI{10x10x8}{\nano\meter})
   }
   \label{fig:siliconresults}
 \end{figure}
@@ -270,7 +270,7 @@ Es zeigen sich höhere Rauheiten, feinere Nanoporen und steilere Hänge, die zu 
     \end{overpic}
   \end{subfigure}
   \caption[Oberflächenprofil einer Silizium-PVD-Schicht]{
-    Oberflächenprofil einer auf Si-(111) per PVD abgeschiedenen Schicht
+    Oberflächenprofil einer per PVD-Simulation erzeugten Schicht
   }
   \label{fig:siliconprofile}
 \end{figure}
@@ -289,8 +289,8 @@ Es zeigen sich höhere Rauheiten, feinere Nanoporen und steilere Hänge, die zu 
       \put(0,0){\input{img/si111_underrelaxed_profile_scale.pdf_tex}}
     \end{overpic}
   \end{subfigure}
-  \caption[Oberflächenprofil einer unterrelaxierten Siliziumschicht]{
-    Oberflächenprofil einer unterrelaxierten, porösen Silizium-PVD-Schicht
+  \caption[Oberflächenprofil einer unterrelaxierten \ce{Si}-Schicht]{
+    Oberflächenprofil einer unterrelaxierten \ce{Si}-Schicht, PVD-Simulation
   }
   \label{fig:siliconunderrelaxedprofile}
 \end{figure}
