--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -8,7 +8,7 @@ Deshalb soll der TMA-\ce{H2O}-Prozess im Folgenden besonders hinsichtlich der Re
 Dazu wurden verschiedene Parametersätze hinsichtlich der Anwendbarkeit auf reaktive Oberflächenabscheidungen untersucht, und schließlich erste Oberflächenreaktionen mit ihnen simuliert.
 Dabei ist bisher lediglich die Simulation der reaktiven Hydroxylierung der Oberfläche gelungen, was auf die mangelhafte Beschreibung der \ce{Al-C}-Bindungen mit den benutzten Potentialen zurück zu führen ist.
 
-\subsection{Parametersätze}
+\subsection{ReaxFF-Parametersätze}
 
 Für die MD-Simulation von \ce{Al2O3} stehen drei Parametrisierungen zur Verfügung, die bereits aus den Untersuchungen der Silizium-Potentiale bekannt sind (Abschnitt~\ref{siliconpvd}):
 
