--- a/depositions.tex
+++ b/depositions.tex
@@ -174,7 +174,7 @@ Anders als der Name des Prozesses vermuten lässt, werden aufgrund sterischer Hi
 Die Suche nach möglichen Precursorpaaren und Prozessparametern unterliegt ansonsten gleichen Anforderungen wie bei CVD.
 Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Precursorpaaren für verschiedene Materialien findet sich in Referenz~\cite{puurunen_surface_2005}.
 
-\subsection{Simulation von Gasphasenabscheidungen}
+\subsection{Methoden zur Simulation von Gasphasenabscheidungen}
 
 Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations}).
 Jede dieser Methoden basiert auf anderen Annahmen und Formulierungen, sodass sich ihre Anwendungsgebiete zwar nur marginal überschneiden, aber der Transfer von Ergebnissen zwischen den Methoden zu präziseren Vorhersagen führen kann.
