--- a/forcefields.tex
+++ b/forcefields.tex
@@ -1,4 +1,4 @@
-\subsection{Kraftfelder}
+\subsection{Molekulardynamische Kraftfelder}
 \label{mdforcefields}
 
 Das zentrale Element molekulardynamischer Methoden sind Kraftfelder~$\vec F(X)$, auch Potentiale~$V(X)$ genannt, welche die Interaktionen der simulierten Teilchen beschreiben\cite{hoover_molecular_1986}.
