--- a/md.tex
+++ b/md.tex
@@ -6,7 +6,7 @@ Dadurch findet sie Anwendung in Simulationen von Materialeigenschaften und Molek
 
 Nachfolgend möchte ich einen kurzen Überblick über die Formulierung molekulardynamischer Methoden geben (Abschnitt~\ref{mdformulation}) und im Anschluss auf die Unterschiede und Möglichkeiten der Kraftfelder eingehen (Abschnitt~\ref{mdforcefields}).
 
-\subsection{Formulierung}
+\subsection{Formulierung der Molekulardynamik}
 \label{mdformulation}
 
 Molekulardynamik ist eine klassische Vielteilchenmethode, die jedem Teilchen des Systemes im Zustand $X$ eine Masse $m$, eine Position $\vec r$, einen Impuls $\vec p$ und Kräfte entsprechend eines lokalen Kraftfeldes $\vec{F}(X)$ oder eventuellen Randbedingungen zuweist.
@@ -160,7 +160,7 @@ Die Temperatur $T$ des Systemes wird bei der simulierten Abkühlung ausgehend vo
 
 \input{forcefields}
 
-\subsection{Verfügbare Software}
+\subsection{Auswahl verfügbarer Molekulardynamik-Software}
 
 Für molekulardynamische Simulationen stehen sowohl kommerzielle als auch freie Softwarepakete zur Verfügung, die jeweils eigene Parametersätze mitbringen.
 In LAMMPS lassen sich zudem auch externe Parametersätze einbinden, wodurch die Betrachtung neuer Problemstellungen erleichtert wird.
