--- a/parsivald.tex
+++ b/parsivald.tex
@@ -13,7 +13,7 @@ Dazu müssen relativ große Strukturen von \SI{10x10}{\nano\meter} bis \SI{1x1}{
 Die Simulationsräume enthalten dann bis zu \num{1e9} Atome, liegen also bis zu \num{5} Größenordnungen über den Möglichkeiten reiner MD-Simulationen.
 Durch die Nutzung massiver Parallelisierung werden zudem atomistische Simulationen über eine Simulationszeit von mehreren Minuten ermöglicht.
 
-\subsection{Beschreibung}
+\subsection{Beschreibung des Parsivald-Modells}
 
 \begin{figure}[b]
   \centering
