--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -39,7 +39,7 @@ Das Verschwinden der Hohlräume in eigenen Experimenten deutet auf ein Artefakt 
   \caption{Fehlgeschlagene \ce{CuNi}-Abscheidungen während der Parameter-Optimierung}
 \end{figure}
 
-\section{Multilagen mit einer Dicke von 5 nm}
+\section{Simulationen mit Lagendicken von jeweils \texorpdfstring{\SI{5}{\nano\meter}}{5 nm}}
 
 Ergänzend wurden auch Untersuchungen an Schichten mit Lagendicken begonnen, die sich an technologisch relevanten Werten von mehreren Nanometern orientieren.
 Abbildung~\ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für weitere Optimierungszyklen der Simulationsparameter nicht weiter untersucht wurde, weshalb in der Darstellung noch Krater- und Porenbildungen zu beobachten ist, die vermutlich unter Nutzung der optimalen Werte (siehe Kapitel~\ref{multilayer}) eliminiert werden.
