--- a/datastructures.tex
+++ b/datastructures.tex
@@ -16,7 +16,7 @@ Zuletzt finden die Simulationen aus praktischen Gründen in \textbf{teilperiodis
 %% Daraus ergeben sich jeweils Vor- und Nachteile für verschiedene Datenstrukturen, sodass etwa für die Vereinigung zweier disjunkter Triangulation (Stitching) in periodischen Räumen zusätzlicher Aufwand gegenüber nichtperiodischen Räumen betrieben werden muss.
 %% Die größten Vorteile ergeben sich aus der Lokalität von Ereignissen, da so für die meisten Datenstrukturen nur kleine Teilstrukturen überprüft und aktualisiert werden müssen.
 
-\subsection{Vergleich der Laufzeiten mit verschiedenen Datenstrukturen}
+\subsection{Vergleich der Laufzeiten für verschiedene Datenstrukturen}
 
 Als Datenstrukturen stehen \textbf{Atomlisten}, \textbf{Nachbarschaftslisten} (NB-Listen), lineares \textbf{Binning}, Binning in \textbf{Octrees}, \textbf{k-d-Bäume} und \textbf{Delaunay-Triangulationen} zur Auswahl\cite{skiena_algorithm_2010,press_numerical_2007}.
 %, von denen eine Auswahl in Abbildung~\ref{fig:datastructures} dargestellt ist.
@@ -99,7 +99,7 @@ Theoretisch sind mit Access Caching, Bitweiser Adressierung, Surface Flagging od
   \label{fig:octree}
 \end{figure}
 
-\subsection{k-d-Bäume}
+\subsubsection{k-d-Bäume}
 \label{datakdtree}
 
 \begin{figure}[b]
@@ -118,7 +118,7 @@ Nachteile ergeben sich bei Modifikationen von Atomen, die durch Baumrotation in 
 Durch die einseitige, dichte und gleichverteilte Hinzufügung von Atomen während einer Oberflächenabscheidung ist dieser Fall allerdings gegeben, da sich der Median der Atompositionen in z-Richtung stetig verschiebt.
 Deshalb bieten sich k-d-Bäume zwar für allgemeine Suchoperationen in statischen Off-Lattice-Strukturen an, sind aber nicht für effiziente KMC-Simulationen geeignet.
 
-\subsection{Delaunay-Triangulation}
+\subsubsection{Delaunay-Triangulation}
 \label{datadelaunay}
 
 Eine dritte Partitionsmethode findet sich in der Delaunay-Triangulation\cite{su_comparison_1995}, welche jedoch asymmetrisch und nicht-orthogonal arbeitet, indem die konvexe Hülle der Punktwolke raumfüllend in disjunkte k-dimensionale Simplexe\footnote{Ein $k$-Simplex ist ein Objekt in $k$ Dimensionen mit $k+1$ Eckpunkten, die untereinander mit geraden Kanten verbunden sind. Somit ist ein 1-Simplex eine Linie, ein 2-Simplex ein Dreieck, ein 3-Simplex ein Tetraeder, etc.}
